Fix missing space between signature and body when sending an email

--- a/app/src/main/res/raw/signature_margins.css
+++ b/app/src/main/res/raw/signature_margins.css
@@ -1,1 +1,1 @@
-body { margin-top: 0px; margin-bottom: 1rem; } /* Only one selector in the whole file is supported. Here it's `body` */
+body { margin-top: 1rem; margin-bottom: 1rem; } /* Only one selector in the whole file is supported. Here it's `body` */
